# hackathon

./: README.md  dprint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/athena/: .eslintrc.js  package.json
apps/athena/src/: App.tsx
apps/gaia/: Cargo.toml
apps/gaia/src/: main.rs  startup.rs
apps/gaia/src/models/: pokemon.rs
apps/gaia/src/routes/: get_pokemon.rs  health_check.rs  mod.rs
apps/hera/: next.config.js  package.json
apps/hera/pages/: _app.tsx  index.tsx
apps/hera/pages/api/: hello.ts
libs/logger/: package.json
libs/logger/src/: index.ts  info.ts
libs/queries/: getPokemons.ts  index.ts  package.json
libs/ui/: .eslintrc.js  package.json
libs/ui/src/: bootcard.tsx  button.tsx  card.tsx  footer.tsx  header.tsx  highlight.tsx  jumbotron.tsx  main.tsx  title.tsx
models/: Ability.ts  Sprites.ts  index.ts  package.json  pokemon.ts  resource.ts
