[package]
name = "gaia"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gaia"

[dependencies]
actix-web = "4.1.0"
anyhow = "1"
base64 = "0.13.0"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.75"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
